add style sheet

--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<!--
+ <!--
     Title: Webpage Template
     Use:  For class 
     Author:  Eugene Moses
     School/Term:  University of Missouri - Columbia/Spring 2024 
     Developed: Feb 6th 
     Tested:  Feb 6th
--->   
+  -->   
 
 
 		<meta charset="utf-8">          
 		<title>Home page</title>
-
-<head>
+        <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <h1>
     Good morning, starshine. The Earth says hello!!
     </h1>
-</head>
-<body>
+
+
     <subheading>
      <h2>
         Hey Hey! It’s Eugene and this is my website, get ready to see the best art in your life. Well I think it's the best(that’s because it’s all mine)
@@ -37,7 +38,7 @@
     </main>
 
 
-    <br>
+
 
     <section>
      <footer>
