--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -13,7 +13,7 @@
 
 		<meta charset="utf-8">          
 		<title>Home page</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href=style.css>
 </head>
 <body>
     <h1>
