--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -16,9 +16,7 @@
         <link rel="stylesheet" href=style.css>
 </head>
 <body>
-    <h1>
-    Good morning, starshine. The Earth says hello!!
-    </h1>
+    <h1> Good morning, starshine. The Earth says hello!!</h1>
 
 
     <subheading>
