--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -7,7 +7,7 @@
         eveloped: Feb 6th 
         Tested:  Feb 6th 
     -->             
-    
+    <link rel="stylesheet" href=style.css>
       <meta charset="utf-8">             
     <title>About Me</title>
     
@@ -29,7 +29,7 @@
         </p>
     </main>
 
-
+    <p>You can download my resume <a href="resume.pdf" class="resume-link">here</a>.</p>
     <!-- quote section-->
    <section>
         <h3>One of my favorite Quotes</h3>
