--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -14,6 +14,7 @@
 		<meta charset="utf-8">          
 		<title>Home page</title>
         <link rel="stylesheet" href=style.css>
+        <link rel="navsheet" href="nav.css">
 </head>
 <body>
     <h1> Good morning, starshine. The Earth says hello!!</h1>
@@ -46,4 +47,12 @@
         </footer>
     </section>
 
-</body></html>
+</body>
+<ul>
+    <img src="your_logo.png" alt="Logo" class="logo">
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#Projects">Project</a></li>
+    <li><a href="#home">About</a></li>
+  </ul>
+  
+</html>
