--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -50,9 +50,9 @@
 </body>
 <ul>
     <img src="your_logo.png" alt="Logo" class="logo">
-    <li><a class="active" href="#home">Home</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
     <li><a href="#Projects">Project</a></li>
-    <li><a href="#home">About</a></li>
+    <li><a href="about.html">About</a></li>
   </ul>
   
 </html>
