--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -48,11 +48,14 @@
     </section>
 
 </body>
-<ul>
+<nav>
+
+    <ul>
     <img src="your_logo.png" alt="Logo" class="logo">
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="#Projects">Project</a></li>
     <li><a href="about.html">About</a></li>
   </ul>
-  
+</nav>
+
 </html>
