--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -8,5 +8,10 @@
     <li><a href="about.html">About</a></li>
   </ul>
 </nav>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 </head>
 </html>
