--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -8,10 +8,12 @@
     <li><a href="about.html">About</a></li>
   </ul>
 </nav>
+<style>
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
+  </style>
 </head>
 </html>
