--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -8,5 +8,40 @@
     <li><a href="about.html">About</a></li>
   </ul>
 </nav>
+<style>ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F05D23;
+}  
+
+li {
+    display: inline;
+}
+
+li {
+    float: right;
+}
+
+  
+li a {
+    display: block;
+    color: #000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.logo {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    position: relative;
+}
+    
+li a:hover {
+    background-color: #8963BA;
+}</style>
 </head>
 </html>
