--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="navsheet" href="nav.css">
-</head>
+<head><link rel="navsheet" href="nav.css"></head> 
+
+
 <nav>  
     <ul>
     <li><a class="active" href="index.html">Home</a></li>
