--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="navsheet" href="nav.css"></head> 
+
+<head><link rel="navsheet" href=nav.css></head> 
 
 
 <nav>  
