--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <link rel="stylesheet" href=style.css>
-    <link rel="navsheet" href="nav.css">
+    <link rel="navsheet" href=nav.css>
 </head>
 <body>
     <h1> Good morning, starshine. The Earth says hello!!</h1>
