--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -3,6 +3,42 @@
 <head>
     <link rel="stylesheet" href=style.css>
     <link rel="navsheet" href=nav.css>
+    <style>
+        ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F05D23;
+}  
+li {
+    display: inline;
+}
+
+li {
+    float: right;
+}
+
+  
+li a {
+    display: block;
+    color: #000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.logo {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    position: relative;
+}
+    
+li a:hover {
+    background-color: #8963BA;
+}
+    </style>
 </head>
 <body>
     <h1>Good morning, starshine. The Earth says hello!!</h1>
