--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -9,6 +9,9 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    position:fixed;
+    top: 0;
+    width: auto;
     background-color: #F05D23;
  }  
  li {
