--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -11,7 +11,7 @@
     overflow: hidden;
     position:fixed;
     top: 0;
-    width: auto;
+    width: 100%;
     background-color: #F05D23;
  }  
  li {
