--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -4,41 +4,58 @@
     <link rel="stylesheet" href=style.css>
 
  <style>
- ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    position:fixed;
-    top: 0;
-    width: 100%;
-    background-color: #F05D23;
- }  
- li {
-    display: inline;
-    float: right;
- }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #F05D23;
+}
 
+li {
+  float: right;
+}
 
+li a, .dropbtn {
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
   
- li a {
-    display: block;
-    color: #000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
- } 
 
- .logo {
-    position: absolute; 
-    top: 0;
-    left: 0;
-    position: relative;
- }
-    
- li a:hover {
-    background-color: #8963BA;
- }
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #8963BA;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #6BD425;
+  min-width: 154px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #F62DAE;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 </style>
 </head>
 <body>
@@ -73,10 +90,17 @@
 </body>
 <nav>
     <ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="#Projects">Project</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
+        <li><a href="#home">Home</a></li>
+        <li class="dropdown">
+          <a href="#projects" class="dropbtn">Projects</a>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </li>
+        <li><a href="#about">About</a></li>
+      </ul>
 </nav>
 
 </html>
