--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -98,7 +98,7 @@ li.dropdown {
     <br>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="dropdown">
               <a href="#projects" class="dropbtn">Projects</a>
               <div class="dropdown-content">
@@ -107,7 +107,7 @@ li.dropdown {
                 <a href="#">Link 3</a>
               </div>
             </li>
-            <li><a href="#about">About</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
     </nav>
     <section>
