--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -90,7 +90,7 @@ li.dropdown {
 </body>
 <nav>
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="#projects" class="dropbtn">Projects</a>
           <div class="dropdown-content">
@@ -99,7 +99,7 @@ li.dropdown {
             <a href="#">Link 3</a>
           </div>
         </li>
-        <li><a href="#about">About</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
 </nav>
 
