--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -102,9 +102,9 @@ li.dropdown {
             <li class="dropdown">
               <a href="#projects" class="dropbtn">Projects</a>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#project1">Link 1</a>
+                <a href="#project2">Link 2</a>
+                <a href="#project3">Link 3</a>
               </div>
             </li>
             <li><a href="about.html">About</a></li>
