--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -94,9 +94,9 @@ li.dropdown {
         <li class="dropdown">
           <a href="#projects" class="dropbtn">Projects</a>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="#project1">Link 1</a>
+            <a href="#project2">Link 2</a>
+            <a href="#project2">Link 3</a>
           </div>
         </li>
         <li><a href="about.html">About</a></li>
