--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html>
+<head>
 
-<head><link rel="navsheet" href=nav.css></head> 
+
+Style sheet to reference 
+<style>
+.logo {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  position: relative;
+  }
+  
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #F05D23;
+}
+
+li {
+  float: right;
+}
+
+li a, .dropbtn {
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+  
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #8963BA;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #6BD425;
+  min-width: 154px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #F62DAE;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+</head>
 
 
-<nav>  
-    <ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="#Projects">Project</a></li>
-    <li><a href="about.html">About</a></li>
-    </ul>
-</nav>
+
+
+
+<body>
+
+<ul>
+  <img src="your_logo.png" alt="Logo" class="logo">
+  <li><a href="#home">Home</a></li>
+  <li class="dropdown">
+    <a href="#projects" class="dropbtn">Projects</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
+  <li><a href="#about">About</a></li>
+</ul>
+
+</body>
 </html>
