--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -98,7 +98,7 @@ li.dropdown {
         <ul>
             <li><a href="index.html">Home</a></li>
             <li class="dropdown">
-              <a href="#projects" class="dropbtn">Projects</a>
+              <a href="javascript:void(0)" class="dropbtn">Projects</a>
               <div class="dropdown-content">
                 <a href="#project1">Link 1</a>
                 <a href="#project2">Link 2</a>
