--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -89,7 +89,7 @@ li.dropdown {
         <p>I saw this quote at the <strong>Beyonce’s Renaissance World Tour</strong> concert this past October: </p>
     
         <blockquote>
-            <em>”Whoever Controls the Media, Controls the Mind" - Jim Morrison<em>
+            <em>”Whoever Controls the Media, Controls the Mind" - Jim Morrison</em>
         </blockquote>
     
     </section>
