--- a/webdevelopment/navbar.html
+++ b/webdevelopment/navbar.html
@@ -2,7 +2,21 @@
 <html>
 <head>
 
-
+<style>
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F05D23;
+}  
+li {
+    display: inline;
+}
+li a:hover {
+    background-color: #8963BA;
+}
+</style>
 
 
 </head>
