--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -8,61 +8,10 @@
         Tested:  Feb 6th 
     -->             
     <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href="nav.css">
       <meta charset="utf-8">             
     <title>About Me</title>
-    <style>
- ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #F05D23;
-}
-li {
-  float: right;
-}
 
-li a, .dropbtn {
-  display: block;
-  color: #000;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-  
-li a:hover, .dropdown:hover .dropbtn {
-  display: block;
-  background-color: #8963BA;
-}
-
-li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #6BD425;
-  min-width: 154px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #F62DAE;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 </style>
     <head>
      <h1>
@@ -97,18 +46,22 @@ li.dropdown {
     </section>
     <br>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Projects</a>
-              <div class="dropdown-content">
-                <a href="#project1">Link 1</a>
-                <a href="#project2">Link 2</a>
-                <a href="#project3">Link 3</a>
-              </div>
-            </li>
-            <li><a href="about.html">About</a></li>
-          </ul>
+        <div class="navbar">
+            <ul class="entireBar">
+              <li class="dropdown">
+                <a href="#">Projects</a>
+                <div class="dropdown-content">
+                  <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="index.html">Home</a></li>
+            </ul>
+          </div>
     </nav>
     <section>
         <footer>
