--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h1>Good morning, starshine. The Earth says hello!!</h1>
+    <title>Good morning, starshine. The Earth says hello!!</title>
 
 
     <subheading>
