--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -7,7 +7,7 @@
 
 </head>
 <nav>
-    <div class="navbar">
+ class="navbar">
         <ul class="entireBar">
           <li class="dropdown">
             <a href="#">Projects</a>
@@ -23,7 +23,7 @@
           <li><a href="reflection.html">Personal Reflection</a></li>
           <li><a href="index.html">Home</a></li>
         </ul>
-      </div>
+    
 </nav>
 <body>
     <h1>Artist’s statement</h1>
