--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -11,13 +11,13 @@
         <ul class="entireBar">
           <li class="dropdown">
             <a href="#">Projects</a>
-            <div class="dropdown-content">
+            class="dropdown-content">
               <ul>
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
               </ul>
-            </div>
+        
           </li>
           <li><a href="about.html">About</a></li>
           <li><a href="reflection.html">Personal Reflection</a></li>
