--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -28,7 +28,7 @@
 </nav>
 <body>
     <h1>Artist’s statement</h1>
-    <div class="box container">
+    <div class="box">
 
         <p>Embracing the desire to be a creative person and pursuing activities that bring you joy and satisfaction is a wonderful and fulfilling journey. But it can be a tough one or even one that takes pauses. So the act of creating, whether it be through art, writing, music, or any other medium, allows you to express yourself authentically and connect with your innermost thoughts and emotions. 
         </p>
@@ -37,7 +37,7 @@
         In the pursuit of creativity, I find comfort and liberation. There's a subconscious desire within me to immerse myself in the world of imagination, unburdened by external expectations or rigid structures. It's a journey where I give myself the freedom to explore, experiment, and manifest my innermost thoughts into tangible forms.
         </p>
         <br>
-        <p>
+        <p class="indent">
         Creativity, for me, is not just a skill or a hobby; it's a way of life. It's a decision to prioritize my happiness and well-being by engaging in activities that resonate with my soul. Whether it's picking up a paintbrush, playing with words on a blank page, or editing a short film, each act of creation is a celebration of my unique perspective and an affirmation of my identity.
         </p>
         <br>
