--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -30,7 +30,7 @@
     <h1>Artist’s statement</h1>
     <div class="box">
 
-        <p>Embracing the desire to be a creative person and pursuing activities that bring you joy and satisfaction is a wonderful and fulfilling journey. But it can be a tough one or even one that takes pauses. So the act of creating, whether it be through art, writing, music, or any other medium, allows you to express yourself authentically and connect with your innermost thoughts and emotions. 
+        <p class="bigLetter">Embracing the desire to be a creative person and pursuing activities that bring you joy and satisfaction is a wonderful and fulfilling journey. But it can be a tough one or even one that takes pauses. So the act of creating, whether it be through art, writing, music, or any other medium, allows you to express yourself authentically and connect with your innermost thoughts and emotions. 
         </p>
         <br>
         <p>
