--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -33,7 +33,7 @@
         <p class="bigLetter">Embracing the desire to be a creative person and pursuing activities that bring you joy and satisfaction is a wonderful and fulfilling journey. But it can be a tough one or even one that takes pauses. So the act of creating, whether it be through art, writing, music, or any other medium, allows you to express yourself authentically and connect with your innermost thoughts and emotions. 
         </p>
         <br>
-        <p>
+        <p class="indent">
         In the pursuit of creativity, I find comfort and liberation. There's a subconscious desire within me to immerse myself in the world of imagination, unburdened by external expectations or rigid structures. It's a journey where I give myself the freedom to explore, experiment, and manifest my innermost thoughts into tangible forms.
         </p>
         <br>
@@ -41,13 +41,13 @@
         Creativity, for me, is not just a skill or a hobby; it's a way of life. It's a decision to prioritize my happiness and well-being by engaging in activities that resonate with my soul. Whether it's picking up a paintbrush, playing with words on a blank page, or editing a short film, each act of creation is a celebration of my unique perspective and an affirmation of my identity.
         </p>
         <br>
-       <p> In the realm of creativity, there are no boundaries, no rules that confine my thoughts. It's a realm where I am the master of my universe, shaping and reshaping it with every stroke, word, or note. The joy that comes from creating something from scratch, from the depths of my imagination, is unparalleled. It's a personal sanctuary where I can escape the mundane and enter a world of limitless possibilities.
+       <p class="indent">In the realm of creativity, there are no boundaries, no rules that confine my thoughts. It's a realm where I am the master of my universe, shaping and reshaping it with every stroke, word, or note. The joy that comes from creating something from scratch, from the depths of my imagination, is unparalleled. It's a personal sanctuary where I can escape the mundane and enter a world of limitless possibilities.
        </p>
        <br>
-       <p> Yet, it's not always about the end result; <strong>it's about the process</strong>. The act of creation is a journey of self-discovery, a mirror reflecting my evolving thoughts and emotions. It teaches me patience, resilience, and the beauty of embracing imperfections. In the realm of creativity, mistakes are not flaws; they are stepping stones towards something unique and extraordinary.
+       <p class="indent"> Yet, it's not always about the end result; <strong>it's about the process</strong>. The act of creation is a journey of self-discovery, a mirror reflecting my evolving thoughts and emotions. It teaches me patience, resilience, and the beauty of embracing imperfections. In the realm of creativity, mistakes are not flaws; they are stepping stones towards something unique and extraordinary.
        </p>
         <br>
-       <p> So, I will continue to be a creative soul, painting my canvas with the colors of my emotions, weaving stories that echo my experiences. Because in the act of creation, I find not just happiness but a profound connection with the essence of who I am — a free spirit navigating the vast landscape of imagination.
+       <p class="indent"> So, I will continue to be a creative soul, painting my canvas with the colors of my emotions, weaving stories that echo my experiences. Because in the act of creation, I find not just happiness but a profound connection with the essence of who I am — a free spirit navigating the vast landscape of imagination.
        </p>
         
         
