--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -6,6 +6,10 @@
 
 
 </head>
+
+reflection.html (notice there is no # for this one because we created this page in Part 1)
+#contact.html
+#project.html
 <nav>
  <div class="navbar">
         <ul class="entireBar">
@@ -20,6 +24,7 @@
             </div>
           </li>
           <li><a href="about.html">About</a></li>
+          <li><a href="#">Contact</a></li>
           <li><a href="reflection.html">Personal Reflection</a></li>
           <li><a href="index.html">Home</a></li>
         </ul>
