--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -59,6 +59,7 @@
                 </div>
               </li>
               <li><a href="about.html">About</a></li>
+              <li><a href="#">Contact</a></li>
               <li><a href="reflection.html">Personal Reflection</a></li>
               <li><a href="index.html">Home</a></li>
             </ul>
