--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -24,6 +24,7 @@
             </div>
           </li>
           <li><a href="about.html">About</a></li>
+          <li><a href="#">Contact</a></li>
           <li><a href="index.html">Home</a></li>
         </ul>
       </div>
