--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -38,6 +38,11 @@
 </body>
 <nav>
     <div class="navbar">
+      <button class="hamburger" onclick="toggleMenu()">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </button>
         <ul class="entireBar">
           <li class="dropdown">
             <a href="#">Projects</a>
