--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href=style.css>
     <link rel="stylesheet" href="nav.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
     <h1>Good morning, starshine. The Earth says hello!!</h1>
 </head>
