--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -61,6 +61,11 @@
     </section>
 
 </body>
-
+<script>
+  function toggleMenu() {
+    var navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('active');
+  }
+  </script>
 
 </html>
