--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -62,9 +62,13 @@
 
 </body>
 <script>
-  function toggleMenu() {
-    var navbar = document.querySelector('.navbar');
-    navbar.classList.toggle('active');
+  function myFunction() {
+    var x = document.getElementById("myLinks");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
+    }
   }
   </script>
 
