--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -63,7 +63,7 @@
 </body>
 <script>
   function myFunction() {
-    var x = document.getElementById("myLinks");
+    var x = document.getElementById(".navbar");
     if (x.style.display === "block") {
       x.style.display = "none";
     } else {
@@ -71,5 +71,6 @@
     }
   }
   </script>
+
 
 </html>
