--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -26,7 +26,7 @@
         </li>
         <li><a href="about.html">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="reflection.html">Personal Reflection</a></li>
+        <li><a href="reflection.html">Reflection</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
