--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,7 +9,8 @@
     -->             
     <link rel="stylesheet" href=style.css>
     <link rel="stylesheet" href="nav.css">
-      <meta charset="utf-8">             
+      <meta charset="utf-8">       
+    <meta name="viewport" content="width=device-width, initial-scale=1">      
     <title>About Me</title>
 
 </style>
