--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -9,9 +9,15 @@
     -->             
     <link rel="stylesheet" href=style.css>
     <link rel="stylesheet" href="nav.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">             
     <nav>
     <div class="navbar">
+      <button class="hamburger" onclick="toggleMenu()">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </button>
         <ul class="entireBar">
           <li class="dropdown">
             <a href="#">Projects</a>
