--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -3,12 +3,17 @@
 <head>
     <link rel="stylesheet" href=style.css>
     <link rel="stylesheet" href="nav.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <nav>
  <div class="navbar">
+  <button class="hamburger" onclick="toggleMenu()">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </button>
         <ul class="entireBar">
           <li class="dropdown">
             <a href="#">Projects</a>
