--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -66,6 +66,12 @@
             </ul>
           </div>
     </nav>
+    <script>
+      function toggleMenu() {
+        var navbar = document.querySelector('.navbar');
+        navbar.classList.toggle('active');
+      }
+      </script>
     <section>
         <footer>
            <p>Eugene Moses <br>
