--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -35,3 +35,9 @@
         </ul>
       </div>
 </nav>
+<script>
+  function toggleMenu() {
+    var navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('active');
+  }
+  </script>
