--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -64,6 +64,12 @@
         
         </div>
 </body>
+<script>
+  function toggleMenu() {
+    var navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('active');
+  }
+  </script>
 <section>
     <footer>
        <p>Eugene Moses <br>
