add buttom here too

--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -48,6 +48,11 @@
     <br>
     <nav>
         <div class="navbar">
+          <button class="hamburger" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </button>
             <ul class="entireBar">
               <li class="dropdown">
                 <a href="#">Projects</a>
