--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -14,11 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">      
     <title>About Me</title>
 
-  
+<div class="uniquifier"> 
      <h1>
      About Me
         </h1>
     </head>
+  </div>
     
     <main>
         <body>
