--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -21,6 +21,7 @@
 
     
     <main>
+      <div class="box">
         <body>
         <p>My name is Eugene Moses and I am a current Senior at the University of Missouri - Columbia, set to graduate in the Spring of 2024. My academic journey has been a dynamic one, navigating through various colleges before finding my academic home in the College of Arts and Science. I am pursuing a major in Communication with a specialized emphasis in mass media.
         <br>
@@ -30,6 +31,8 @@
         <br>
         As I navigate my final year, I am enthusiastic about applying these skills to real-world scenarios, contributing to the nuanced world of communication and media. Feel free to explore my academic journey and the insights gained through the years I have studied. As I am not an Art major of any sort, everything has always had an influence from it. 
         </p>
+      </body>
+      </div>
     </main>
 
     <p>You can download my resume <a href="resume.pdf" class="resume-link">here</a>.</p>
