--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -34,7 +34,7 @@
 <body>
    
 
-<div class="box"></div>
+<div class="box">
     <subheading>
      <h2>
         Hey Hey! It’s Eugene and this is my website, get ready to see the best art in your life. Well I think it's the best (that’s because it’s all mine)
@@ -49,7 +49,6 @@
         <p>
     </main>
 
-</body>
 </div>
 
 
