--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -86,7 +86,7 @@
     <section>
         <footer>
            <p>Eugene Moses <br>
-            <img src=“apple-touch-icon.png><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
+            <img src=apple-touch-icon.png><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
            <p>© 2024 Eugene Moses<p>
         </footer>
     </section>
