--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -87,7 +87,10 @@
         <footer>
            <p>Eugene Moses <br>
             <img src="apple-touch-icon.png"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
-           <p>© 2024 Eugene Moses<p>
+            <p>
+              <img src="apple-touch-iconphone.png" 1+888-888-8888</p>
+
+           <p>© 2024 Eugene Moses</p>
         </footer>
     </section>
 
