--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -86,9 +86,9 @@
     <section>
         <footer>
            <p>Eugene Moses <br>
-            <img src="apple-touch-icon.png"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
-            <p>
-              <img src="apple-touch-iconphone.png" 1+888-888-8888</p>
+            <img src="apple-touch-icon.png"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p><br>
+          
+             <p> <img src="apple-touch-iconphone.png"> 1 +888-888-8888</p>
 
            <p>© 2024 Eugene Moses</p>
         </footer>
