--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -86,7 +86,7 @@
     <section>
         <footer>
            <p>Eugene Moses <br>
-            <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p><br>
+            <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
           
              <p> <img src="apple-touch-iconphone.png" class="smallimage"> 1 +888-888-8888</p>
 
