--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -23,7 +23,7 @@
 
     
     <main>
-    
+    <div class="yellowtail">
         <body>
         <p>My name is Eugene Moses and I am a current Senior at the University of Missouri - Columbia, set to graduate in the Spring of 2024. My academic journey has been a dynamic one, navigating through various colleges before finding my academic home in the College of Arts and Science. I am pursuing a major in Communication with a specialized emphasis in mass media.
         <br>
