--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -72,9 +72,12 @@
   </script>
 <section>
     <footer>
-       <p>Eugene Moses <br>
-           <a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
-       <p>© 2024 Eugene Moses<p>
+      <p>Eugene Moses <br>
+        <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
+      
+         <p> <img src="apple-touch-iconphone.png" class="smallimage">1+888-888-8888</p>
+
+       <p>© 2024 Eugene Moses</p>
        </footer>
    </section>
 
