--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -23,7 +23,6 @@
 
     
     <main>
-    <div class="yellowtail">
         <body>
         <p>My name is Eugene Moses and I am a current Senior at the University of Missouri - Columbia, set to graduate in the Spring of 2024. My academic journey has been a dynamic one, navigating through various colleges before finding my academic home in the College of Arts and Science. I am pursuing a major in Communication with a specialized emphasis in mass media.
         <br>
@@ -34,9 +33,8 @@
         As I navigate my final year, I am enthusiastic about applying these skills to real-world scenarios, contributing to the nuanced world of communication and media. Feel free to explore my academic journey and the insights gained through the years I have studied. As I am not an Art major of any sort, everything has always had an influence from it. 
         </p>
       </body>
-      </div>
     </main>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5tr0zpLYvJ4?si=2LKl_9Hgy2w3q9IP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>You can download my resume <a href="resume.pdf" class="resume-link">here</a>.</p>
  </div>
     <!-- quote section-->
