--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -34,7 +34,7 @@
         </p>
       </body>
     </main>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5tr0zpLYvJ4?si=2LKl_9Hgy2w3q9IP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/5tr0zpLYvJ4?si=2LKl_9Hgy2w3q9IP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>You can download my resume <a href="resume.pdf" class="resume-link">here</a>.</p>
  </div>
     <!-- quote section-->
