--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -35,9 +35,33 @@
         </ul>
       </div>
 </nav>
+
+
+<div class="layout">
+  <div class="section section1">
+    <img src="Project1.jpg" alt="Project 1">
+  </div>
+  <div class="section section2">
+    <img src="Project 2.jpeg" alt="Project 2">
+  </div>
+  <div class="section section3">
+    <img src="Project 3.png" alt="Project 3">
+
+
 <script>
   function toggleMenu() {
     var navbar = document.querySelector('.navbar');
     navbar.classList.toggle('active');
   }
   </script>
+
+<section>
+  <footer>
+   <p>Eugene Moses <br>
+     <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
+   
+      <p> <img src="apple-touch-iconphone.png" class="smallimage">1+888-888-8888</p>
+
+    <p>© 2024 Eugene Moses</p>
+     </footer>
+ </section>
