--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -40,6 +40,7 @@
 <div class="layout">
   <div class="section section1">
     <img src="Project1.jpg" alt="Project 1">
+    <a href="Project 1.html"></a>
   </div>
   <div class="section section2">
     <img src="Project 2.jpeg" alt="Project 2">
