--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -15,10 +15,10 @@
     </button>
       <ul class="entireBar">
         <li class="dropdown">
-          <a href="#">Projects</a>
+          <a href="project.html">Projects</a>
           <div class="dropdown-content">
             <ul>
-              <li><a href="#">Link 1</a></li>
+              <li><a href="Project 1.html">Link 1</a></li>
               <li><a href="#">Link 2</a></li>
               <li><a href="#">Link 3</a></li>
             </ul>
