--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -23,7 +23,7 @@
             <a href="#">Projects</a>
             <div class="dropdown-content">
               <ul>
-                <li><a href="#">Link 1</a></li>
+                <li><a href="Project 1.html">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
               </ul>
@@ -36,7 +36,7 @@
       </div>
 </nav>
 
-<h1>Project 1 </h1>
+<h1>Project 1</h1>
 <h2>Before</h2>
 <img src="before.png" alt="Before project">
 <h2>After</h2>
