--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -23,7 +23,7 @@
             <a href="#">Projects</a>
             <div class="dropdown-content">
               <ul>
-                <li><a href="#">Link 1</a></li>
+                <li><a href="Project1.html">Project 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
               </ul>
@@ -57,7 +57,8 @@
   </script>
 
 <section>
-  <footer>
+
+ <footer>
    <p>Eugene Moses <br>
      <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
    
