--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -20,7 +20,7 @@
       </button>
         <ul class="entireBar">
           <li class="dropdown">
-            <a href="#">Projects</a>
+            <a href="project.html">Projects</a>
             <div class="dropdown-content">
               <ul>
                 <li><a href="Project1.html">Project 1</a></li>
