--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -38,7 +38,7 @@
 
 <h1>Project 1</h1>
 <h2>Before</h2>
-<img src="before.png" alt="Before project">
+<img src="Before.png" alt="Before project">
 <h2>After</h2>
 <img src="Project1.jpg" alt="Project 1">
 
