--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -31,6 +31,7 @@
           </li>
           <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="reflection.html">Reflection</a></li>
           <li><a href="index.html">Home</a></li>
         </ul>
       </div>
