--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -23,7 +23,7 @@
             <a href="project.html">Projects</a>
             <div class="dropdown-content">
               <ul>
-                <li><a href="Project1.html">Link 1</a></li>
+                <li><a href="Project1.html">Project 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
               </ul>
