--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -37,17 +37,18 @@
       </div>
 </nav>
 
+<h1>Projects</h1>
 
 <div class="layout">
   <div class="section section1">
-    <img src="Project1.jpg" alt="Project 1" class="section img">
+    <img src="Project1.jpg" alt="Project 1" class="sectionimg">
     <a href="Project 1.html"></a>
   </div>
   <div class="section section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="section img">
+    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg">
   </div>
   <div class="section section3">
-    <img src="Project 3.png" alt="Project 3" class="section img">
+    <img src="Project 3.png" alt="Project 3" class="sectionimg">
 
 
 <script>
