--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -45,22 +45,21 @@
     <a href="Project 1.html"></a>
   </div>
   <div class="section section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg">
+    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg"></div>
   </div>
   <div class="section section3">
-    <img src="Project 3.png" alt="Project 3" class="sectionimg">
-
+    <img src="Project 3.png" alt="Project 3" class="sectionimg"></div>
+</div>
 
 <script>
   function toggleMenu() {
     var navbar = document.querySelector('.navbar');
     navbar.classList.toggle('active');
   }
-  </script>
+</script>
 
 <section>
-
- <footer>
+<footer>
    <p>Eugene Moses <br>
      <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
    
