--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -43,12 +43,12 @@
   <div class="section section1">
     <img src="Project1.jpg" alt="Project 1" class="sectionimg">
     <a href="Project 1.html"></a>
-  </div>
+
   <div class="section section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg"></div>
-  </div>
+    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg">
+
   <div class="section section3">
-    <img src="Project 3.png" alt="Project 3" class="sectionimg"></div>
+    <img src="Project 3.png" alt="Project 3" class="sectionimg">
 </div>
 
 <script>
