--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -40,15 +40,16 @@
 <h1>Projects</h1>
 
 <div class="layout">
-  <div class="section section1">
-    <img src="Project1.jpg" alt="Project 1" class="sectionimg">
+  <div class="section1">
+    <img src="Project1.jpg" alt="Project 1">
     <a href="Project 1.html"></a>
-
-  <div class="section section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="sectionimg">
-
-  <div class="section section3">
-    <img src="Project 3.png" alt="Project 3" class="sectionimg">
+</div>
+  <div class="section2">
+    <img src="Project 2.jpeg" alt="Project 2">
+</div>
+  <div class="section3">
+    <img src="Project 3.png" alt="Project 3">
+</div>
 </div>
 
 <script>
