--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -41,14 +41,14 @@
 
 <div class="layout">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1">
+    <img src="Project1.jpg" alt="Project 1" class="miniimage">
     <a href="Project 1.html"></a>
 </div>
   <div class="section2">
     <img src="Project 2.jpeg" alt="Project 2">
 </div>
   <div class="section3">
-    <img src="Project 3.png" alt="Project 3">
+    <img src="Project 3.png" alt="Project 3" class="smallerimage">
 </div>
 </div>
 
