--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -38,9 +38,9 @@
 </nav>
 
 <h1>Project 1</h1>
-<h2>Before</h2>
+<h2 class="centeredtext">Before</h2>
 <img src="Before.png" alt="Before project">
-<h2>After</h2>
+<h2 class="centeredtext">After</h2>
 <img src="Project1.jpg" alt="Project 1">
 
 <div class="box">
