--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -45,7 +45,7 @@
     <a href="Project 1.html"></a>
 </div>
   <div class="section2">
-    <img src="Project 2.jpeg" alt="Project 2">
+    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
 </div>
   <div class="section3">
     <img src="Project 3.png" alt="Project 3" class="smallerimage">
