--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -43,6 +43,7 @@
   <div class="section1">
     <img src="Project1.jpg" alt="Project 1" class="miniimage">
     <a href="Project 1.html"></a>
+    <p class="centered">Project 1</p>
 </div>
   <div class="section2">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
