--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -43,13 +43,16 @@
   <div class="section1">
     <img src="Project1.jpg" alt="Project 1" class="miniimage">
     <a href="Project 1.html"></a>
-    <p class="centered">Project 1</p>
+    <p class="centeredtext">Project 1</p>
 </div>
   <div class="section2">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
+    <p class="centeredtext">Project 2</p>
 </div>
   <div class="section3">
     <img src="Project 3.png" alt="Project 3" class="smallerimage">
+    <p class="centeredtext">Project 3</p>
+
 </div>
 </div>
 
