--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -41,7 +41,7 @@
 
 <div class="layout">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1" class="miniimage">
+    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
     <a href="Project 1.html"></a>
     <p class="centeredtext">Project 1</p>
 </div>
