--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -71,7 +71,7 @@
                 </div>
               </li>
               <li><a href="about.html">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="contactpage.html">Contact</a></li>
               <li><a href="reflection.html">Reflection</a></li>
               <li><a href="index.html">Home</a></li>
             </ul>
