--- a/webdevelopment/contactpage.html
+++ b/webdevelopment/contactpage.html
@@ -35,6 +35,7 @@
     <h1>Contact Form</h1>
     
     <div class="container">
+     <form action="mailto:aemdwb@missouri.edu?Subject=Contact%20Form%20Submission" method="post" enctype="text/plain">
       <form action="/action_page.php">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
