--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="nav.css">
       <meta charset="utf-8">       
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <label id="ham" for="hamburger">&#9776</label>
 <input type="checkbox" id="hamburger">
 <nav id="NavBox">
@@ -20,7 +20,7 @@
     <ul>
         <li class="active"><a href="index.html" id="Home">Home</a></li>
         <li><a href="about.html" id="About">About</a></li>
-        <li><a href="Project.html" id="Projects">Projects</a>
+        <li><a href="project.html" id="Projects">Projects</a>
             <ul>
                 <li><a href="project" id="Link1">Project 1</a></li>
                 <li><a href="" id="Link2">Project 2</a></li>
