--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li class="active"><a href="index.html" id="Home">Home</a></li>
         <li><a href="about.html" id="About">About</a></li>
-        <li><a href="Project.html" id="Projects">Projects</a>
+        <li><a href="project.html" id="Projects">Projects</a>
             <ul>
                 <li><a href="project" id="Link1">Project 1</a></li>
                 <li><a href="" id="Link2">Project 2</a></li>
