--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -34,22 +34,22 @@
 
 <h1>Projects</h1>
 
-<div class="layout">
-  <div class="section1">
+<main id="ProjectContent">
+<div class="column">
     <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
     <a href="Project 1.html"></a>
     <p class="centeredtext">Project 1</p>
 </div>
-  <div class="section2">
+  <div class="column">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
     <p class="centeredtext">Project 2</p>
 </div>
-  <div class="section3">
+  <div class="column">
     <img src="Project 3.png" alt="Project 3" class="smallerimage">
     <p class="centeredtext">Project 3</p>
 
 </div>
-</div>
+</main>
 
 
 
