--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -37,8 +37,9 @@
 <main id="ProjectContent">
 <div class="column">
     <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
-    <a href="Project 1.html"></a>
+    <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
+
 </div>
   <div class="column">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
