--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -35,7 +35,7 @@
 <h1>Projects</h1>
 
 <main id="ProjectContent">
-<div class="column">
+<div class="box">
     <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
     <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
