--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -37,20 +37,21 @@
 <main id="layout">
 <div class="box">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
+    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <br>
     <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
 </div>
 </div>
   <div class="box">
     <div class="section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
+    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
     <p class="centeredtext">Project 2</p>
 </div>
 </div>
   <div class="box">
     <div class="section3">
-    <img src="Project 3.png" alt="Project 3" class="smallerimage">
+    <img src="Project 3.png" alt="Project 3" class="smallerimage" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
     <p class="centeredtext">Project 3</p>
 </div>
 </div>
