--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -37,8 +37,7 @@
 <main id="layout">
 <div class="box">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-    <br>
+    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" >
     <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
 </div>
