--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -44,13 +44,13 @@
 </div>
   <div class="box">
     <div class="section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage" >
     <p class="centeredtext">Project 2</p>
 </div>
 </div>
   <div class="box">
     <div class="section3">
-    <img src="Project 3.png" alt="Project 3" class="smallerimage" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <img src="Project 3.png" alt="Project 3" class="smallerimage" >
     <p class="centeredtext">Project 3</p>
 </div>
 </div>
