--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -39,10 +39,12 @@
   <div class="section1">
     <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" >
     <br>
-    <a href="Project1.html">click to learn more</a>
+    <div class="centeredtext">
+    <a href="Project1.html">click to learn more</a></div>
     <p class="centeredtext">Project 1</p>
 </div>
 </div>
+
   <div class="box">
     <div class="section2">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage" >
