--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -37,11 +37,7 @@
 <main id="layout">
 <div class="box">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" >
-    <br>
-    <div class="centeredtext">
-    <a href="Project1.html">click to learn more</a></div>
-    <p class="centeredtext">Project 1</p>
+    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" > <div class="centeredtext"> <a href="Project1.html">click to learn more</a></div><p class="centeredtext">Project 1</p>
 </div>
 </div>
 
