--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -34,7 +34,7 @@
 <body>
 <h1>Project 1</h1>
 <h2 class="centeredtext">Before</h2>
-<img src="Before.png" alt="Before project">
+<img src="Before.png" alt="Before project" class="projectimage1">
 <h2 class="centeredtext">After</h2>
 <img src="Project1.jpg" alt="Project 1">
 
