--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -23,9 +23,9 @@
             <li><a href="reflection.html">Reflection</a></li>
             <li><a href="project.html" id="Projects">Projects</a>
                 <ul>
-                    <li><a href="project" id="Link1">Project 1</a></li>
-                    <li><a href="" id="Link2">Project 2</a></li>
-                    <li><a href="" id="Link3">Project 3</a></li>
+                    <li><a href="projec1.html" id="Link1">Project 1</a></li>
+                    <li><a href="project2.html" id="Link2">Project 2</a></li>
+                    <li><a href="project3.html" id="Link3">Project 3</a></li>
                 </ul>
             </li>
            
@@ -46,6 +46,7 @@
 </div>
 
 <div class="box">
+
     I Forgot How To Paint (2022)
     <br>
     Acrylic on wood canvas 
