--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -11,15 +11,16 @@
     <ul>
         <li class="active"><a href="index.html" id="Home">Home</a></li>
         <li><a href="about.html" id="About">About</a></li>
-        <li><a href="project.html" id="Projects">Projects</a>
-            <ul>
-                <li><a href="project" id="Link1">Project 1</a></li>
-                <li><a href="" id="Link2">Project 2</a></li>
-                <li><a href="" id="Link3">Project 3</a></li>
-            </ul>
-        </li>
         <li><a href="contactpage.html">Contact</a></li>
         <li><a href="reflection.html">Reflection</a></li>
+        <li><a href="project.html" id="Projects">Projects</a>
+            <ul>
+                <li><a href="projec1.html" id="Link1">Project 1</a></li>
+                <li><a href="project2.html" id="Link2">Project 2</a></li>
+                <li><a href="project3.html" id="Link3">Project 3</a></li>
+            </ul>
+        </li>
+       
 
     </ul>
 </nav>
