--- a/webdevelopment/project2.html
+++ b/webdevelopment/project2.html
@@ -43,3 +43,16 @@
     <br>
     In the short film, the boy symbolically represents the journey of exploring academic majors, embodying the notion of being on the wrong path. His struggles during the first date mirror the challenges faced when pursuing a major that doesn't align with one's true passion. The girl, reflecting my own experiences, embodies the uncertainty and search for the right fit amidst varied academic pursuits. As the boy realizes he might be barking up the wrong tree, it parallels the moment of self-discovery when I recognized the need for a change in direction. The film becomes a metaphor for the continuous exploration, the trial and error of finding the right major, and the eventual clarity that comes when the right path is chosen. It reflects the universal theme of navigating through uncertainties and embracing the journey towards discovering one's true calling.
 </div>
+
+<section>
+    <footer>
+       <p>Eugene Moses <br>
+        <img src="apple-touch-icon.png" class="smallimage"><a href="mailto:aemdwb@umsystem.edu">aemdwb@umsystem.edu</a></p>
+      
+         <p> <img src="apple-touch-iconphone.png" class="smallimage">1+888-888-8888</p>
+
+       <p>© 2024 Eugene Moses</p>
+    </footer>
+</section>
+
+</body></html>
