--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -49,7 +49,7 @@
 </div>
   <div class="box">
     <div class="section3">
-    <img src="Project 2.jpeg" alt="Project 3" class="smallerimage" >
+    <img src="Project 2.jpeg" alt="Project 3" class="smallerimage" > <div class="centeredtext"> <a href="project3.html">click to learn more</a></div><p class="centeredtext">Project 3</p>
     <p class="centeredtext">Project 3</p>
 </div>
 </div>
