--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -45,6 +45,32 @@
         <p>
     </main>
 
+    <h2>Some Things I Love!</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Colors</th>
+                <th>Styles</th>
+                <th>Music</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>LIME GREEN</td>
+                <td>PUNK</td>
+                <td>EDM</td>
+            </tr>
+            <tr>
+                <td>ORANGE</td>
+                <td>MAXIMALIST</td>
+                <td>HOUSE</td>
+            </tr>
+            <tfoot>
+                <td>YELLOW</td>
+                <td>BOHO</td>
+                <td>RAP</td>
+            </tfoot>
+    </table>
 </div>
 
 
