--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -62,7 +62,7 @@
             </tr>
             <tr>
                 <td>ORANGE</td>
-                <td>MAXIMALIST</td>
+                <td>RAVE</td>
                 <td>HOUSE</td>
             </tr>
             <tfoot>
