--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -23,7 +23,7 @@
         <li><a href="reflection.html">Reflection</a></li>
         <li><a href="project.html" id="Projects">Projects</a>
             <ul>
-                <li><a href="projec1.html" id="Link1">Project 1</a></li>
+                <li><a href="Project1.html" id="Link1">Project 1</a></li>
                 <li><a href="project2.html" id="Link2">Project 2</a></li>
                 <li><a href="project3.html" id="Link3">Project 3</a></li>
             </ul>
