--- a/webdevelopment/project2.html
+++ b/webdevelopment/project2.html
@@ -29,8 +29,9 @@
 <h1>Project 2</h1>
 
 <div class="box">
-<h2 class="centeredtext">Scene 1 Script</h2>
+<h2 class="centeredtext">Scene 1 Script Sample</h2>
 <img src="script.png" alt="Script" class="projectimage2">
+<p> <a href="final film.pdf" class="resume-link">Full Script</a></p>
 </div>
 </div>
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/xLk6M_PNqFw?si=tnCsmgCIrKtdEdBx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
